--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
-						   					<h1>Aloha! <br>I'm Carissa!</h1>
+						   					<h1>Carissa O'Connell <br> Software Developer</h1>
 						   					<!--<h2>100% html5 bootstrap templates Made by <a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2>-->
 											   <p><a class="btn btn-primary btn-learn" href="files/CarissaOConnellResume-SoftwareDeveloper.pdf" download>Download Resume <i class="icon-download4"></i></a></p>
 											</div>
@@ -121,8 +121,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
-						   					<h1>A passionate<br> Software Developer</h1>
-												<!--<h2>100% html5 bootstrap templates Made by <a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2>-->
+						   					<h1>My portfolio</h1>
 												<p><a class="btn btn-primary btn-learn" href="https://github.com/carissaoconnell/Data-Structures">View Portfolio <i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
@@ -231,7 +230,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								</span>
 								<div class="desc">
 									<h3>Versatility</h3>
-									<p>Programs that could be used across multiple devices</p>
+									<p>Methods for the programs are designed to have reusable codes</p>
 								</div>
 							</div>
 						</div>
@@ -242,7 +241,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								</span>
 								<div class="desc">
 									<h3>Meticulous</h3>
-									<p>Triple checking the program to make sure all requirements are meet, test cases are passed, and quality is infused in the visuals</p>
+									<p>Programs are triple checked to make sure all requirements are meet and test cases are passed</p>
 								</div>
 							</div>
 						</div>
@@ -253,7 +252,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								</span>
 								<div class="desc">
 									<h3>Security</h3>
-									<p>Implementing appropriate security measures used to protect the clients data and the integrity of the business</p>
+									<p>Appropriate security measures are implemented to protect the clients data and the integrity of the business</p>
 								</div>
 							</div>
 						</div>
@@ -263,8 +262,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									<i class="icon-bulb"></i>
 								</span>
 								<div class="desc">
-									<h3>Innovative Ideas</h3>
-									<p>Finding creative ways to implement methods</p>
+									<h3>Latest Ideas</h3>
+									<p>I enjoy researching and keeping up to date to find the latest features used for programs</p>
 								</div>
 							</div>
 						</div>
@@ -275,7 +274,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								</span>
 								<div class="desc">
 									<h3>Data Structures and Algorithms</h3>
-									<p>Utilize algorithms that optimize space and time</p>
+									<p>Utilize algorithms to optimize space and time</p>
 								</div>
 							</div>
 						</div>
@@ -690,18 +689,20 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								<span><a href="#">Data Structures</a></span></p>
 						</div>
 					</div>
+
+					<!-- Recent Projects -->
 					<!-- Article 1 -->
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="project" style="background-image: url(images/monsterra.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">The Aloha Thread</a></h3>
+										<h3><a href="the-aloha-thread-blog.html">The Aloha Thread</a></h3>
 										<span>Websites</span>
 										<p class="icon">
-											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 56</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 3</a></span>
+											<span><a href=""><i class="icon-share3"></i></a></span>
+											<span><a href="#"><i class="icon-eye"></i> </a></span>
+											<span><a href="#"><i class="icon-heart"></i> </a></span>
 										</p>
 									</div>
 								</div>
@@ -712,12 +713,12 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="project" style="background-image: url(images/sewing-materials.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Fashion Fabricator</a></h3>
+										<h3><a href="fashion-fabricator-blog.html">Fashion Fabricator</a></h3>
 										<span>Apps</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 25</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 2</a></span>
+											<span><a href="#"><i class="icon-eye"></i> </a></span>
+											<span><a href="#"><i class="icon-heart"></i> </a></span>
 										</p>
 									</div>
 								</div>
@@ -725,15 +726,15 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 						</div>
 						<!-- Article 3 -->
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
-							<div class="project" style="background-image: url(images/river-flow-in-forest.jpg);">
+							<div class="project" style="background-image: url(images/board-games.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Nature Bound Geek</a></h3>
-										<span>Websites</span>
+										<h3><a href="antique-games-blog.html">Antique Games</a></h3>
+										<span>Websites / Apps</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 37</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 9</a></span>
+											<span><a href="#"><i class="icon-eye"></i> </a></span>
+											<span><a href="#"><i class="icon-heart"></i> </a></span>
 										</p>
 									</div>
 								</div>
@@ -741,15 +742,15 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 						</div>
 						<!-- Article 4 -->
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
-							<div class="project" style="background-image: url(images/img-4.jpg);">
+							<div class="project" style="background-image: url(images/magic-book.JPG);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Geek Mode Forever</a></h3>
+										<h3><a href="word-wizard-blog.html">Word Wizard</a></h3>
 										<span>Websites</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 82</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 7</a></span>
+											<span><a href="#"><i class="icon-eye"></i> </a></span>
+											<span><a href="#"><i class="icon-heart"></i> </a></span>
 										</p>
 									</div>
 								</div>
@@ -760,12 +761,12 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="project" style="background-image: url(images/galaxy.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Constellations</a></h3>
+										<h3><a href="constellations-app.html">Constellations</a></h3>
 										<span>Wear Os</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 22</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 5</a></span>
+											<span><a href="#"><i class="icon-eye"></i> </a></span>
+											<span><a href="#"><i class="icon-heart"></i> </a></span>
 										</p>
 									</div>
 								</div>
@@ -773,15 +774,15 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 						</div>
 						<!-- Article 6 -->
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/rx.jpg);">
+							<div class="project" style="background-image: url(images/health-map.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Rx Tracker</a></h3>
+										<h3><a href="health-map-blog.html">Health Map</a></h3>
 										<span>Websites / Apps</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 45</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 3</a></span>
+											<span><a href="#"><i class="icon-eye"></i> </a></span>
+											<span><a href="#"><i class="icon-heart"></i> </a></span>
 										</p>
 									</div>
 								</div>
@@ -796,47 +797,56 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					</div>
 				</div>
 			</section>
+			<!-- End Recent Projects -->
 
+			<!-- Recent Blogs -->
 			<section class="colorlib-blog" data-section="blog">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<span class="heading-meta">Read</span>
-							<h2 class="colorlib-heading">Recent Blog</h2>
+							<h2 class="colorlib-heading">Recent Blogs</h2>
 						</div>
 					</div>
+
+					<!-- Blog 1 -->
 					<div class="row">
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="blog01.html" class="blog-img"><img src="images/blog-1.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="blog01.html" class="blog-img"><img src="images/tech/computer-vegetation.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
-									<span><small>April 14, 2018 </small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog01.html">Renovating National Gallery</a></h3>
+									<span><small>Nov 2023 </small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 0</small></span>
+									<h3><a href="blog01.html">Software Methodologies</a></h3>
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 								</div>
 							</div>
 						</div>
+
+						<!-- Blog 2 -->
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="blog-entry">
-								<a href="blog02.html" class="blog-img"><img src="images/blog-2.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="blog03.html" class="blog-img"><img src="images/tech/data-economy.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
-									<span><small>April 14, 2018 </small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog02.html">Wordpress for a Beginner</a></h3>
+									<span><small>April 14, 2018 </small> | <small> Data Structures and Algorithms </small> | <small> <i class="icon-bubble3"></i> 0</small></span>
+									<h3><a href="blog03.html">Data Algorithms</a></h3>
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 								</div>
 							</div>
 						</div>
+
+						<!-- Blog 3 -->
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="blog03.html" class="blog-img"><img src="images/blog-3.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="blog05.html" class="blog-img"><img src="images/tech/data-center.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
-									<span><small>April 14, 2018 </small> | <small> Inspiration </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog03.html">Make website from scratch</a></h3>
+									<span><small>April 14, 2018 </small> | <small> Data Architecture </small> | <small> <i class="icon-bubble3"></i> 0</small></span>
+									<h3><a href="blog05.html">Entity Relationship (ER) Diagram</a></h3>
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 								</div>
 							</div>
 						</div>
 					</div>
+					<!-- Load more blogs -->
 					<div class="row">
 						<div class="col-md-12 animate-box">
 							<p><a href="blog-MainIndex.html" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>
@@ -844,6 +854,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					</div>
 				</div>
 			</section>
+			<!-- End Recent Blogs -->
 
 			<section class="colorlib-contact" data-section="contact" id="contact">
 				<div class="colorlib-narrow-content">
