--- a/blog08.html
+++ b/blog08.html
@@ -110,7 +110,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					<p>August 10, 2022; Updated: Jan 2023</p>
 
 					<!-- Blog -->
-					<a href="Visual-JOIN-master/joins-index.html">Joins Site</a>
+					<p>JOIN is an SQL clause used to query and access data from multiple tables, based on logical relationships between those tables.</p>
+					<p>The <a href="Visual-JOIN-master/joins-index.html">Joins Site</a> is a visual and interactive way to learn about Joins!</p>
 
 					<div class="unique-p"> 
 						<h2>Inner Join</h2>
