--- a/blog-MainIndex.html
+++ b/blog-MainIndex.html
@@ -4,7 +4,7 @@
     <title>blog</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -39,6 +39,7 @@
 
     <!-- loader stylesheet -->
     <link rel="stylesheet" href="underwater-pure-css-animation/dist/stle.css"> 
+
 
   </head>
   <body>
@@ -90,9 +91,11 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					<div class="col-md-8 text text-center">
 						<div class="img mb-4" style="background-image: url(images/author.jpg);"></div>
 						<div class="desc">
-							<h2 class="subheading">Welcome to my Blog!</h2>
-							<h1>Join our discussions about</h1>
-							<p><b>Programming, Systems and Information Management and Software Integration and Testing!</b></p>
+							<h1 class="subheading">Welcome to my Blog!</h1>
+							<div class="unique-p">
+								<h2>Join in on our discussions about</h2>
+								<h3>Programming, Systems and Information Management and Software Integration and Testing!</h3>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -335,14 +338,14 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<!-- Eighth Blog -->
 							<div class="col-md-6">
 			    				<div class="blog-entry ftco-animate">
-										<a href="#" class="img img-2" style="background-image: url(images/tech/inner-join.png);"></a>
+										<a href="blog08.html" class="img img-2" style="background-image: url(images/tech/data-economy.jpg);"></a>
 										<div class="text text-2 pt-2 mt-3">
 											<span class="category mb-3 d-block"><a href="#">SQL</a></span>
 				              <h3 class="mb-4"><a href="blog08.html">Joins in SQL</a></h3>
 				              <p class="mb-4">Joins in SQL are essential when it comes to combining data.</p>
 				              <!-- Author's Info -->
 							  <div class="author mb-4 d-flex align-items-center">
-				            		<a href="#" class="img" style="background-image: url(images/ocean.jpg);"></a>
+				            		<a href="index.html" class="img" style="background-image: url(images/ocean.jpg);"></a>
 				            		<div class="ml-3 info">
 				            			<span>Written by</span>
 				            			<h3><a href="index.html">Carissa O'Connell</a>, <span>Nov. 28, 2018</span></h3>
