--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					   					<div class="desc">
 						   					<h1>Carissa O'Connell <br> Software Developer</h1>
 						   					<!--<h2>100% html5 bootstrap templates Made by <a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2>-->
-											   <p><a class="btn btn-primary btn-learn" href="files/CarissaOConnellResume-SoftwareDeveloper.pdf" download>Download Resume <i class="icon-download4"></i></a></p>
+											   <p><a class="btn btn-primary btn-learn" href="files/Software Engineer Resume.pdf" download>Download Resume <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
