--- a/data-architecture-blogs.html
+++ b/data-architecture-blogs.html
@@ -87,11 +87,11 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 				<div class="overlay"></div>
 				<div class="js-fullheight d-flex justify-content-center align-items-center">
 					<div class="col-md-8 text text-center">
-						<div class="img mb-4" style="background-image: url(images/author.jpg);"></div>
 						<div class="desc">
-							<h2 class="subheading">Blogs about Data Architecture</h2>
-                            <p><a href="index.html" class="btn-custom mr-2">Home</a></p>
-							<a href="blog-MainIndex.html" class="btn-custom mr-2">Blogs</a></p>
+							<!-- Topic -->
+							<h7 class="subheading"><b>Blogs about Data Architecture</b></h7>
+							<p><h9><a href="index.html" class="btn-custom mr-2">Home</a></h9></p>
+							<p><h9><a href="blog-MainIndex.html" class="btn-custom mr-2">Blogs</a></h9></p>
 						</div>
 					</div>
 				</div>
@@ -520,84 +520,84 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 	            </div>
 	            <div class="sidebar-box ftco-animate">
 	            	<h3 class="sidebar-heading">Categories</h3>
-	              <ul class="categories">
-	                <li><a href="#">Software <span></span></a></li>
-	                <li><a href="#">Data Structures <span></span></a></li>
-	                <li><a href="#">System Managment <span></span></a></li>
-	                <li><a href="#">Data Architecture<span></span></a></li>
-	                <li><a href="#">SQL<span></span></a></li>
-					<li><a href="#">Java<span></span></a></li>
-					<li><a href="#">C++<span></span></a></li>
-	              </ul>
+					<ul class="categories">
+						<li><a href="software-blogs.html">Software <span></span></a></li>
+						<li><a href="data-structure-and-algorithms-blogs.html">Data Structures <span></span></a></li>
+						<li><a href="system-managment-blogs.html">System Managment <span></span></a></li>
+						<li><a href="data-architecture-blogs.html">Data Architecture<span></span></a></li>
+						<li><a href="sql-blogs.html">SQL<span></span></a></li>
+						<li><a href="java-blogs.html">Java<span></span></a></li>
+						<li><a href="c++blogs.html">C++<span></span></a></li>
+					  </ul>
 	            </div>
 
 				<!--Popular Articles -->
-				<!--Popular Article 1 -->
-	            <div class="sidebar-box ftco-animate">
-	              <h3 class="sidebar-heading">Popular Articles</h3>
-	              <div class="block-21 mb-4 d-flex">
-	                <a class="blog-img mr-4" style="background-image: url(images/tech/computer-vegetation.jpg);"></a>
-	                <div class="text">
-	                  <h3 class="heading"><a href="blog01.html">Software Methodologies</a></h3>
-	                  <div class="meta">
-	                    <div><a href="#"><span i class="glyphicon glyphicon-calendar"></i></span> Oct. 04, 2018</a></div>
-	                    <div><a href="#"><span i class="glyphicon glyphicon-user"></span> Carissa O'Connell</a></div>
-	                    <div><a href="#"><span i class="glyphicon glyphicon-comment"></span> 7 </a></div>
-	                  </div>
-	                </div>
-	              </div>
-				  <!--Popular Article 2 -->
-	              <div class="block-21 mb-4 d-flex">
-	                <a class="blog-img mr-4" style="background-image: url(images/tech/lightbulb-ideas.jpg);"></a>
-	                <div class="text">
-	                  <h3 class="heading"><a href="blog02.html">Choosing a Software Developent Methodology</a></h3>
-	                  <div class="meta">
-	                    <div><a href="#"><span i class="glyphicon glyphicon-calendar"></i></span> Oct. 04, 2018</a></div>
-	                    <div><a href="#"><span i class="glyphicon glyphicon-user"></span> Carissa O'Connell</a></div>
-	                    <div><a href="#"><span i class="glyphicon glyphicon-comment"></span> 7 </a></div>
-	                  </div>
-	                </div>
-	              </div>
-				  <!--Popular Article 3 -->
-	              <div class="block-21 mb-4 d-flex">
-	                <a class="blog-img mr-4" style="background-image: url(images/tech/data-economy.jpg);"></a>
-	                <div class="text">
-	                  <h3 class="heading"><a href="blog03.html">Data Algorithms</a></h3>
-	                  <div class="meta">
-	                    <div><a href="#"><span i class="glyphicon glyphicon-calendar"></i></span> Oct. 04, 2018</a></div>
-	                    <div><a href="#"><span i class="glyphicon glyphicon-user"></span> Carissa O'Connell</a></div>
-	                    <div><a href="#"><span i class="glyphicon glyphicon-comment"></span> 7 </a></div>
-	                  </div>
-	                </div>
-	              </div>
-	            </div>
+					<!--Popular Article 1 -->
+					<div class="sidebar-box ftco-animate">
+						<h3 class="sidebar-heading">Popular Articles</h3>
+						<div class="block-21 mb-4 d-flex">
+						  <a class="blog-img mr-4" style="background-image: url(images/tech/computer-vegetation.jpg);"></a>
+						  <div class="text">
+							<h3 class="heading"><a href="blog01.html">Software Methodologies</a></h3>
+							<div class="meta">
+							  <div><a><span i class="glyphicon glyphicon-calendar"></i></span> Nov 2023</a></div>
+							  <div><a href="index.html"><span i class="glyphicon glyphicon-user"></span> Carissa O'Connell</a></div>
+							  <div><a><span i class="glyphicon glyphicon-comment"></span> </a></div>
+							</div>
+						  </div>
+						</div>
+						<!--Popular Article 2 -->
+						<div class="block-21 mb-4 d-flex">
+						  <a class="blog-img mr-4" style="background-image: url(images/tech/lightbulb-ideas.jpg);"></a>
+						  <div class="text">
+							<h3 class="heading"><a href="blog05.html">Entity Relationship (ER) Diagrams</a></h3>
+							<div class="meta">
+							  <div><a><span i class="glyphicon glyphicon-calendar"></i></span> Oct 2023</a></div>
+							  <div><a href="index.html"><span i class="glyphicon glyphicon-user"></span> Carissa O'Connell</a></div>
+							  <div><a><span i class="glyphicon glyphicon-comment"></span> </a></div>
+							</div>
+						  </div>
+						</div>
+						<!--Popular Article 3 -->
+						<div class="block-21 mb-4 d-flex">
+						  <a class="blog-img mr-4" style="background-image: url(images/tech/data-economy.jpg);"></a>
+						  <div class="text">
+							<h3 class="heading"><a href="blog03.html">Data Algorithms</a></h3>
+							<div class="meta">
+							  <div><a><span i class="glyphicon glyphicon-calendar"></i></span> Aug 2022</a></div>
+							  <div><a href="index.html"><span i class="glyphicon glyphicon-user"></span> Carissa O'Connell</a></div>
+							  <div><a><span i class="glyphicon glyphicon-comment"></span> </a></div>
+							</div>
+						  </div>
+						</div>
+					  </div>
 
 				<!-- Tag Cloud -->
 	            <div class="sidebar-box ftco-animate">
 	              <h3 class="sidebar-heading">Tag Cloud</h3>
 				  <ul class="categories">
-	                <li><a href="#">Software <span></span></a></li>
-	                <li><a href="#">Data Structures <span></span></a></li>
-	                <li><a href="#">System Managment <span></span></a></li>
-	                <li><a href="#">Data Architecture<span></span></a></li>
-	                <li><a href="#">SQL<span></span></a></li>
-					<li><a href="#">Java<span></span></a></li>
-					<li><a href="#">C++<span></span></a></li>
-	              </ul>
+					<li><a href="software-blogs.html">Software <span></span></a></li>
+					<li><a href="data-structure-and-algorithms-blogs.html">Data Structures <span></span></a></li>
+					<li><a href="system-managment-blogs.html">System Managment <span></span></a></li>
+					<li><a href="data-architecture-blogs.html">Data Architecture<span></span></a></li>
+					<li><a href="sql-blogs.html">SQL<span></span></a></li>
+					<li><a href="java-blogs.html">Java<span></span></a></li>
+					<li><a href="c++blogs.html">C++<span></span></a></li>
+				  </ul>
 	            </div>
 
 				<div class="sidebar-box subs-wrap img" style="background-image: url(images/bg_1.jpg);">
 					<div class="overlay"></div>
 						<h3 class="mb-4 sidebar-heading">Newsletter</h3>
-						<p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia</p>
-	              		
+						<p class="mb-4">At this time the function does not work but it is a work in progress that will be updated shortly</p>
+						  
 						<form action="#" class="subscribe-form">
-	                		<div class="form-group">
-	                  			<input type="text" class="form-control" placeholder="Email Address">
-	                  			<input type="submit" value="Subscribe" class="mt-2 btn btn-white submit">
-	               			</div>
-	              		</form>
-	            	</div>
+							<div class="form-group">
+								  <input type="text" class="form-control" placeholder="Email Address">
+								  <input type="submit" value="Subscribe" class="mt-2 btn btn-white submit">
+							   </div>
+						  </form>
+					</div>
 
 	            <div class="sidebar-box ftco-animate">
 	            	<h3 class="sidebar-heading">Archives</h3>
@@ -614,7 +614,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 	    	</div>
 	    </section>
 
-
+	<!-- Footer -->
 	   <footer class="ftco-footer ftco-bg-dark ftco-section">
 	      <div class="container px-md-5">
 	        <div class="row mb-5">
@@ -622,14 +622,14 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 	            <div class="ftco-footer-widget mb-4 ml-md-4">
 	              <h2 class="ftco-heading-2">Category</h2>
 				  <ul class="categories">
-	                <li><a href="#">Software <span></span></a></li>
-	                <li><a href="#">Data Structures <span></span></a></li>
-	                <li><a href="#">System Management <span></span></a></li>
-	                <li><a href="#">Data Architecture<span></span></a></li>
-	                <li><a href="#">SQL<span></span></a></li>
-					<li><a href="#">Java<span></span></a></li>
-					<li><a href="#">C++<span></span></a></li>
-	              </ul>
+					<li><a href="software-blogs.html">Software <span></span></a></li>
+					<li><a href="data-structure-and-algorithms-blogs.html">Data Structures <span></span></a></li>
+					<li><a href="system-managment-blogs.html">System Managment <span></span></a></li>
+					<li><a href="data-architecture-blogs.html">Data Architecture<span></span></a></li>
+					<li><a href="sql-blogs.html">SQL<span></span></a></li>
+					<li><a href="java-blogs.html">Java<span></span></a></li>
+					<li><a href="c++blogs.html">C++<span></span></a></li>
+				  </ul>
 	            </div>
 	          </div>
 	          <div class="col-md">
@@ -660,6 +660,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 	        </div>
 	      </div>
 	    </footer>
+		<!-- End Footer -->
 
 		</div><!-- END COLORLIB-MAIN -->
 	</div><!-- END COLORLIB-PAGE -->
