--- a/c++blogs.html
+++ b/c++blogs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>java blogs</title>
+    <title>c++ blogs</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -89,7 +89,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					<div class="col-md-8 text text-center">
 						<div class="desc">
 							<!-- Topic -->
-							<h7 class="subheading"><b>Blogs about Java</b></h7>
+							<h7 class="subheading"><b>Blogs about C++</b></h7>
 							<p><h9><a href="index.html" class="btn-custom mr-2">Home</a></h9></p>
 							<p><h9><a href="blog-MainIndex.html" class="btn-custom mr-2">Blogs</a></h9></p>
 						</div>
@@ -111,7 +111,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 										<a href="blog01.html" class="img img-2" style="background-image: url(images/);"></a>
 										<div class="text text-2 pt-2 mt-3">
 											<!-- tag -->
-											<span class="category mb-3 d-block"><a href="#">Java</a></span>
+											<span class="category mb-3 d-block"><a href="#">Data Architecture</a></span>
 											<!-- blog title -->
 				              <h3 class="mb-4"><a href="blog01.html"></a></h3>
 				              <p class="mb-4"></p>
@@ -143,7 +143,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 										<a href="blog01.html" class="img img-2" style="background-image: url(images/);"></a>
 										<div class="text text-2 pt-2 mt-3">
 											<!-- tag -->
-											<span class="category mb-3 d-block"><a href="#">Java</a></span>
+											<span class="category mb-3 d-block"><a href="#">C++</a></span>
 											<!-- blog title -->
 				              <h3 class="mb-4"><a href="blog01.html"></a></h3>
 				              <p class="mb-4"></p>
@@ -176,7 +176,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 										<a href="blog01.html" class="img img-2" style="background-image: url(images/);"></a>
 										<div class="text text-2 pt-2 mt-3">
 											<!-- tag -->
-											<span class="category mb-3 d-block"><a href="#">Java</a></span>
+											<span class="category mb-3 d-block"><a href="#">C++</a></span>
 											<!-- blog title -->
 				              <h3 class="mb-4"><a href="blog01.html"></a></h3>
 				              <p class="mb-4"></p>
@@ -208,7 +208,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 										<a href="blog01.html" class="img img-2" style="background-image: url(images/);"></a>
 										<div class="text text-2 pt-2 mt-3">
 											<!-- tag -->
-											<span class="category mb-3 d-block"><a href="#">Java</a></span>
+											<span class="category mb-3 d-block"><a href="#">C++</a></span>
 											<!-- blog title -->
 				              <h3 class="mb-4"><a href="blog01.html"></a></h3>
 				              <p class="mb-4"></p>
@@ -241,7 +241,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 										<a href="blog01.html" class="img img-2" style="background-image: url(images/);"></a>
 										<div class="text text-2 pt-2 mt-3">
 											<!-- tag -->
-											<span class="category mb-3 d-block"><a href="#">Java</a></span>
+											<span class="category mb-3 d-block"><a href="#">C++</a></span>
 											<!-- blog title -->
 				              <h3 class="mb-4"><a href="blog01.html"></a></h3>
 				              <p class="mb-4"></p>
@@ -274,7 +274,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 										<a href="blog01.html" class="img img-2" style="background-image: url(images/);"></a>
 										<div class="text text-2 pt-2 mt-3">
 											<!-- tag -->
-											<span class="category mb-3 d-block"><a href="#">Java</a></span>
+											<span class="category mb-3 d-block"><a href="#">C++</a></span>
 											<!-- blog title -->
 				              <h3 class="mb-4"><a href="blog01.html"></a></h3>
 				              <p class="mb-4"></p>
@@ -307,7 +307,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 										<a href="blog01.html" class="img img-2" style="background-image: url(images/);"></a>
 										<div class="text text-2 pt-2 mt-3">
 											<!-- tag -->
-											<span class="category mb-3 d-block"><a href="#">Java</a></span>
+											<span class="category mb-3 d-block"><a href="#">C++</a></span>
 											<!-- blog title -->
 				              <h3 class="mb-4"><a href="blog01.html"></a></h3>
 				              <p class="mb-4"></p>
@@ -340,7 +340,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 										<a href="blog01.html" class="img img-2" style="background-image: url(images/);"></a>
 										<div class="text text-2 pt-2 mt-3">
 											<!-- tag -->
-											<span class="category mb-3 d-block"><a href="#">Java</a></span>
+											<span class="category mb-3 d-block"><a href="#">C++</a></span>
 											<!-- blog title -->
 				              <h3 class="mb-4"><a href="blog01.html"></a></h3>
 				              <p class="mb-4"></p>
@@ -373,7 +373,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 										<a href="blog01.html" class="img img-2" style="background-image: url(images/);"></a>
 										<div class="text text-2 pt-2 mt-3">
 											<!-- tag -->
-											<span class="category mb-3 d-block"><a href="#">Java</a></span>
+											<span class="category mb-3 d-block"><a href="#">C++</a></span>
 											<!-- blog title -->
 				              <h3 class="mb-4"><a href="blog01.html"></a></h3>
 				              <p class="mb-4"></p>
@@ -406,7 +406,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 										<a href="blog01.html" class="img img-2" style="background-image: url(images/);"></a>
 										<div class="text text-2 pt-2 mt-3">
 											<!-- tag -->
-											<span class="category mb-3 d-block"><a href="#">Java</a></span>
+											<span class="category mb-3 d-block"><a href="#">C++</a></span>
 											<!-- blog title -->
 				              <h3 class="mb-4"><a href="blog01.html"></a></h3>
 				              <p class="mb-4"></p>
@@ -439,7 +439,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 										<a href="blog01.html" class="img img-2" style="background-image: url(images/);"></a>
 										<div class="text text-2 pt-2 mt-3">
 											<!-- tag -->
-											<span class="category mb-3 d-block"><a href="#">Java</a></span>
+											<span class="category mb-3 d-block"><a href="#">C++</a></span>
 											<!-- blog title -->
 				              <h3 class="mb-4"><a href="blog01.html"></a></h3>
 				              <p class="mb-4"></p>
@@ -472,7 +472,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 										<a href="blog01.html" class="img img-2" style="background-image: url(images/);"></a>
 										<div class="text text-2 pt-2 mt-3">
 											<!-- tag -->
-											<span class="category mb-3 d-block"><a href="#">Java</a></span>
+											<span class="category mb-3 d-block"><a href="#">C++</a></span>
 											<!-- blog title -->
 				              <h3 class="mb-4"><a href="blog01.html"></a></h3>
 				              <p class="mb-4"></p>
